[package]
name = "arrasbot"
version = "0.1.0"
authors = ["Aspect <ttmmiizz100@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "*"
async-std = "*"
async-tungstenite = { version = "*", features = ["async-std-runtime"] }
serde_json = "*"
thirtyfour_sync = "*"