[package]
name = "arrasbot"
version = "0.1.0"
authors = ["Aspect"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "*"
async-std = "*"
async-tungstenite = "0.2.1"
serde_json = "*"
thirtyfour_sync = "*"
env_logger = "*"
log = "*"
rustls = { version = "0.16", features=["dangerous_configuration"]}
async-tls = "0.6"
webpki = "0.21.0"
tungstenite = "0.9.2"
url = "*"
